feat: добавляет валидацию черновика сценария
